<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/left"
        android:tag="left"
        android:padding="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/ic_action_barrow"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <LinearLayout
            android:layout_marginStart="5dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/left_gesture"
                android:textSize="9pt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/no_gesture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:visibility="gone"
                android:layout_marginBottom="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:tag="left"
                    android:text="@string/select_app"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp" />
                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:background="@android:color/darker_gray"
                android:layout_height="1dp"
                android:layout_width="match_parent"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/upleft"
        android:tag="upleft"
        android:padding="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:rotation="45"
            android:src="@drawable/ic_action_barrow"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <LinearLayout
            android:layout_marginStart="5dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/upleft_gesture"
                android:textSize="9pt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/no_gesture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:visibility="gone"
                android:layout_marginBottom="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:tag="upleft"
                    android:text="@string/select_app"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp" />
                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:background="@android:color/darker_gray"
                android:layout_height="1dp"
                android:layout_width="match_parent"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/up"
        android:tag="up"
        android:padding="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:rotation="90"
            android:src="@drawable/ic_action_barrow"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <LinearLayout
            android:layout_marginStart="5dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/up_gesture"
                android:textSize="9pt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/no_gesture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:visibility="gone"
                android:layout_marginBottom="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:tag="up"
                    android:text="@string/select_app"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp" />
                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:background="@android:color/darker_gray"
                android:layout_height="1dp"
                android:layout_width="match_parent"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/upright"
        android:tag="upright"
        android:padding="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:rotation="135"
            android:src="@drawable/ic_action_barrow"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <LinearLayout
            android:layout_marginStart="5dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/upright_gesture"
                android:textSize="9pt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/no_gesture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:visibility="gone"
                android:layout_marginBottom="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:tag="upright"
                    android:text="@string/select_app"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp" />
                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:background="@android:color/darker_gray"
                android:layout_height="1dp"
                android:layout_width="match_parent"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/right"
        android:tag="right"
        android:padding="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:rotation="180"
            android:src="@drawable/ic_action_barrow"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <LinearLayout
            android:layout_marginStart="5dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/right_gesture"
                android:textSize="9pt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/no_gesture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:visibility="gone"
                android:layout_marginBottom="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:tag="right"
                    android:text="@string/select_app"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp" />
                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:background="@android:color/darker_gray"
                android:layout_height="1dp"
                android:layout_width="match_parent"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/tap"
        android:tag="tap"
        android:padding="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/tap_gesture"
            android:textSize="9pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/no_gesture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:visibility="gone"
            android:layout_marginBottom="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:tag="tap"
                android:text="@string/select_app"
                android:layout_width="wrap_content"
                android:layout_height="35dp" />
            <TextView
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <View
            android:background="@android:color/darker_gray"
            android:layout_height="1dp"
            android:layout_width="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/dtap"
        android:tag="dtap"
        android:padding="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/dtap_gesture"
            android:textSize="9pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/no_gesture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:visibility="gone"
            android:layout_marginBottom="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:tag="dtap"
                android:text="@string/select_app"
                android:layout_width="wrap_content"
                android:layout_height="35dp" />
            <TextView
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <View
            android:background="@android:color/darker_gray"
            android:layout_height="1dp"
            android:layout_width="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ltap"
        android:tag="ltap"
        android:padding="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/ltap_gesture"
            android:textSize="9pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/no_gesture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:visibility="gone"
            android:layout_marginBottom="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:tag="ltap"
                android:visibility="gone"
                android:text="@string/select_app"
                android:layout_width="wrap_content"
                android:layout_height="35dp" />
            <TextView
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <View
            android:background="@android:color/darker_gray"
            android:layout_height="1dp"
            android:layout_width="match_parent"/>
    </LinearLayout>
</LinearLayout>